메뉴바 시나리오 / scss 깃배쉬, browser-sync

--- a/studyContent/study_211124.md
+++ b/studyContent/study_211124.md
@@ -2,3 +2,60 @@
 
 [toc]
 
+#### js
+
+#### 메뉴바 기능
+
+``` js
+/*
+  1. 버튼을 클릭한다. -> 메뉴 나타나라                // document.getElementsByClassName('navbar-toggler');
+  1-1. 버튼 : navbar-toggler -> var navToggleBtn = document.querySelector('.navbar-toggler');
+  1-2. 클릭 : 선택자 클릭(addEventListener) -> navToggleBtn.addEventListener('click', function(event){});
+  1-3. 메뉴 : id="navbarSupportedContent" -> document.querySelector('#navbarSupportedContent');
+                                            // document.getElementById('navbarSupportedContent');
+  1-4. 나타나기 : html.classname="action" : class이름 추가 + (none -> block)
+  1-5. 기능을 수행하기 전 체크 : 
+      해당 버튼의 고유기능 해제( event.preventDefault(); )
+      action의 유무( classList.contains('action') )
+*/
+
+var navToggleBtn = document.querySelector('.navbar-toggler');
+var navbarSupportedContent = document.querySelector('#navbarSupportedContent');
+
+navToggleBtn.addEventListener('click', function(event){
+  // 1-5 사전기능 처리 : 
+  //  1. 기존 고유기능 해제 event.preventDefault();
+  //  2. action 유무 판단 classList.contains('action')
+  var isAction = navbarSupportedContent.classList.contains('action');
+  console.log(isAction);
+  // 1-4 수행
+  if(!isAction){
+    navbarSupportedContent.classList.add('action');
+  }else {
+    navbarSupportedContent.classList.remove('action');
+  }
+});
+```
+
+
+
+
+
+#### scss
+
+#### 깃배쉬 scss 명령어
+
+`sass --watch scss:css` : scss를 css로 실시간 변환
+
+
+
+browser-sync 설치/사용 (node.js이용)
+
+설치(전역) : ` npm install --global browser-sync`
+
+버전 확인 : ` browser-sync --version`
+
+서버 열기 : ` browser-sync start --server --watch --files "**/*.*"`
+
+​														 (서버열기, 실시간 감지, 모든 파일)
+
