--- a/studyContent/study_211125.md
+++ b/studyContent/study_211125.md
@@ -1,4 +1,185 @@
-#### 21.11.25
+## 21.11.25
 
 [toc]
 
+### js
+
+#### this
+
+의미 : 이벤트 주체, property, window
+
+
+
+#### 변수
+
+##### 일반변수
+
+- 일반변수는 값(결과물) 그 자체를 가르키는 것
+
+  ```js
+  var i = 0;
+  var n = i;
+      i = 10;
+      n = i;
+      i = 'text';
+      console.log('i : ' , i , ' n : ' , n);
+  // i :  text  n :  10
+  ```
+
+  
+
+##### 참조변수
+
+- 참조변수는 값이 아닌 주소를 가르키는 것 - [], {}
+
+  ``` js
+  var arrOrigin = [1,2,3];
+  var arrClone = arrOrigin;
+      arrOrigin = ['하나' ,'둘', '셋'];
+  
+  console.log('arrOrigin : ', arrOrigin, 'arrClone : ', arrClone);
+  // arrOrigin :  (3) ['하나', '둘', '셋'] arrClone :  (3) [1, 2, 3]
+  ```
+
+
+
+##### 호이스팅 현상
+
+- 변수 이름이 상단으로 올라가서 존재하는 것처럼 처리
+- 기명함수(함수선언식)로 된 것은 변수선언보다 우선순위로 끌어올려지는 처리
+
+
+
+#### 정렬
+
+##### `sort()`
+
+- 배열의 내용을 정렬로 처리 ( 정렬 기준을 (앞의값, 뒤의값){} )
+- 최소값 예시 : `arr.sort(function(a, b){ return a-b })`
+  - '앞의 값 - 뒤의 값'을 계산하여 결과가 음수이면 앞, 뒤 그대로 배치
+  - '앞의 값 - 뒤의 값'을 계산하여 결과가 양수이면 뒤, 앞 순서로 배치
+  - 정렬기준을 처리하여 반환
+
+
+
+#### `setInterval()`
+
+- 일정시간마다 조건이되면, 끊어주어야한다. 
+  - 끊어주는 기능 : `clearInterval()`
+
+- 예시 (500->250까지 0.01초마다 하나씩 나오게 하기)
+
+  ```js
+  var startNum = 500;
+  var timed = 10;
+  var endNum = 250;
+  
+  var intervalFn;
+  
+  var countFn = function(start){
+    intervalFn = setInterval(function(){
+      console.log(start);
+      start -= 1;
+      if(start <= endNum){
+        console.log(endNum + ' 처리완료');
+        clearInterval(intervalFn);
+      }
+    }, timed);
+  };
+  
+  countFn(startNum);
+  ```
+
+- 비교 `setTimeout()`
+
+  ```js
+  var intervalCountFn = function(startNum){
+    var countNum = startNum;
+    goCheck = false;
+    setTimeout(function(){
+      pSpan.innerText = countNum;
+      countNum -= 1;
+      if(countNum > endNum){
+        intervalCountFn(countNum);
+      }else{
+        pSpan.innerText = countNum + ' 숫자 달성!!!';
+      }
+    }, timed);
+  };
+  
+  btn.addEventListener('click', function(e){
+    e.preventDefault();
+    intervalCountFn(startNum);
+  });
+  ```
+
+
+
+### jQuery
+
+버튼 슬라이드 올리기(`slodeUp()`)/내리기(`slideDown()`)
+
+```js
+(function($){
+  // .btn 내부에 있는 버튼을 클릭하여, .content_area 내용이 사라지거나 나타나게 만들기
+  // -------------------------------------------
+  var btn = $('.btn');
+  var closeBtn = btn.children('.close');
+  var openBtn = btn.children('.open');
+  var open2Btn = btn.children('.open2');
+  var contentArea = $('.content_area');
+  // -------------------------------------------
+  closeBtn.on('click', function(event){ // on이란 함수 기능
+    event.preventDefault(); // 기존 버튼의 기능 삭제
+    contentArea.slideUp();
+  });
+
+  openBtn.on('click', function(event){
+    event.preventDefault();
+    contentArea.slideDown(1000); // 1초동안 나타남
+  });
+    
+  open2Btn.on('click', function(event){
+    event.preventDefault();
+    contentArea.stop().slideToggle(); 
+      // stop()메소드가 없으면 토글은 누르는 횟수만큼 전부 수행한 후 멈춤
+      // stop()메소드가 있으면 누르는 순간순간 반응
+  });
+})(jQuery);
+```
+
+- 비교 js로 같은 기능 수행
+
+  ```js
+  // ----------------------------------------------------
+  var jsBtn = document.querySelector('.btn');
+  var jsCloseBtn = jsBtn.querySelector('.close');
+  var jsOpenBtn = jsBtn.querySelector('.open');
+  var jsOpenBtn2 = jsBtn.querySelector('.open2');
+  var jsContentArea = document.querySelector('.content_area');
+  // ----------------------------------------------------
+  var conH = getComputedStyle(jsContentArea).height;
+  var conHResult = parseInt(conH);
+  var timed = 5;
+  var slideH;
+  // 함수 ----------------------------------------
+  var slideUpFn = function(height){
+    var setH = height;
+    slideH = setInterval(function(){
+      setH -= 1;
+      if(setH >= 0) {
+        jsContentArea.style.height = setH + 'px'
+      }else{
+        clearInterval(slideH);
+        // jsContentArea.style = null;
+        jsContentArea.style.display = 'none';
+      }
+    }, timed);
+  }
+  
+  // jsCloseBtn 클릭 이벤트
+  jsCloseBtn.addEventListener('click', function(event){
+    event.preventDefault();
+    slideUpFn(conHResult);
+  });
+  ```
