[add] 필기파일 - git 명령어

--- a/studyContent/study_211207.md
+++ b/studyContent/study_211207.md
@@ -2,4 +2,26 @@
 
 #### git
 
-- ssh 생성하는 방법이 따로 있
+- ssh 생성하는 방법이 따로 있음
+
+- `git reset` : 전단계로 돌리기
+  
+  - 사용 X
+  
+  - 많이 사용하게 된다면 최대 2단계
+
+- `git revert` : 전단계를 끌어오기
+
+- `git branch` : 브랜치 확인
+  
+  - `git branch -a` : 브랜치 전부 확인하기
+
+- `git branch 브랜치명` : 브랜치명 생성
+
+- `git checkout 브랜치명` : 브랜치로 이동
+
+- `git push --set-upstream origin 브랜치명` : 해당 브랜치에 최초1회 푸쉬할때
+
+- `git merge 합칠 브랜치명` : 기준이 될 브랜치로 이동한 후 합칠 브랜치 명을 입력
+
+- `git 
