--- a/studyContent/study_211207.md
+++ b/studyContent/study_211207.md
@@ -4,24 +4,56 @@
 
 - ssh 생성하는 방법이 따로 있음
 
-- `git reset` : 전단계로 돌리기
+#### 
+
+#### 명령어
+
+- `git clone '주소'` : repository에 자료를 받아서 사용
+
+- `git status` : 현재 작성중인 디렉토리 기준 내용 상태 파악
+
+- `git add [첨부파일]` : git 으로 보낼 자료 선택
+
+- `git commin -m '설명'` : 보낼 자료에 대한 설명
+
+- `git puth` : 자료 전송
+
+- `git push --set-upstream origin 브랜치명` : 해당 브랜치에 최초1회 푸쉬할때 (브랜치를 생성하더라도 동일)
+
+- `git pull` : 자료 추가로 받아오기
+
+- `git reset HEAD~n` : git 현재내용을 이전 `n`단계 만큼 이전 처리
   
   - 사용 X
   
   - 많이 사용하게 된다면 최대 2단계
 
-- `git revert` : 전단계를 끌어오기
+- `git revert HEAD~n` : git reset과 유사하지만, `n`단계만큼 이전상태의 내용을 현재로 복사하여 가져오는 기능
 
-- `git branch` : 브랜치 확인
+- `git branch` : 현재 디렉토리 기준 브랜치 확인
   
   - `git branch -a` : 브랜치 전부 확인하기
 
 - `git branch 브랜치명` : 브랜치명 생성
 
-- `git checkout 브랜치명` : 브랜치로 이동
+- `git checkout 브랜치명` : 해당 브랜치로 이동
 
-- `git push --set-upstream origin 브랜치명` : 해당 브랜치에 최초1회 푸쉬할때
+- `git checkout -b 브랜치명` : 현재 디렉토리에는 없으나 서버에는 존재하는 자료를 받아오게 처리
 
 - `git merge 합칠 브랜치명` : 기준이 될 브랜치로 이동한 후 합칠 브랜치 명을 입력
 
-- `git 
+- `git branch -d 브랜치명` : 해당 브랜치 삭제 (local) - 서버에 있는 브랜치 삭제 아님
+
+- `git push origin --delete 브랜치명` : 서버에 있는 브랜치 삭제
+
+[git 명령어 참고 사이트]([Git - Book](https://git-scm.com/book/ko/v2))
+
+
+
+#### 웹 구성
+
+- 최초의 인식하는 파일 : index.html
+
+package.json : node.js를 이용하여 웹을 구성하기 위해 처리하는 설정용 파일
+
+node.js란? js를 기반으로 웹페이지를 구현
