--- a/studyContent/study_211209.md
+++ b/studyContent/study_211209.md
@@ -28,8 +28,8 @@
   console.log(a3, f1); // apple nokia
   console.log(arrItBrand); // (5) ['samsung', 'lg', 'logitech', 'ms', 'apple']
   ```
-
-- 
+  
+  
 
 -  깊은 복사 방법
   
@@ -47,18 +47,47 @@
   
   console.log(otherContury); // (3) ['logitech', 'ms', 'apple']
   ```
+  
+  
+
+- 함수 : 표현식, 선언식, 즉시실행함수, 화살표함수
+
+- ```js
+  const fnBox2 = (a) => a * 10;
+  
+  // 아래처럼 변환
+  var fnBox2 = function fnBox2(a) {
+    return a * 10;
+  };
+  
+  
+  ```
+
+
+
+- 생성자
+  
+  - 과거에는 생성자 함수와 일반함수의 구분은  Pascal 방식의 이름 구분, this만으로 파악
+  
+  - 생성자 함수는 과거의 형태 그대로 유지하되 명칭이 변경
+  
+  - 타 언어에서는 이러한 개념을 class라고 불리운다. 그래서 js에서도 class라는 명칭을 사용
+
+- ```js
+  class PersonResult {
+    constructor (name, kor, eng){
+      this.name = name;
+      this.kor = kor;
+      this.eng = eng;
+    }
+  }; 
+  ```
 
 - 
 
 
 
 
-
-
-
-
-
-- 함수 : 표현식, 선언식, 즉시실행함수, 화살표함수
 
 - ajax : `XMLHttpRequest`, `fetch()`, `then()`
 
