[add] js - export - javascript 내보내기 및 불러오기 개념이해

--- a/studyContent/study_211213.md
+++ b/studyContent/study_211213.md
@@ -8,8 +8,6 @@
 
 - ~~[polyfill에서 promise 선택 후 html에 script에 넣기](https://polyfill.io/v3/url-builder/)~~
 
-
-
 #### js
 
 ##### for-of
@@ -25,8 +23,6 @@
   ```
   
   결과 : 한줄씩 ( j a v a s c r i p t ) 나옴
-
-
 
 ##### 객체의 값 뽑아내기
 
@@ -45,19 +41,61 @@
     'lg'     : 'wing',
     'nokia'  : 'N serize'
   };
-  
-  
+  ```
+
   const key = Object.keys(obj);
   const val = Object.values(obj);
   const ent = Object.entries(obj);
-  
+
   // console.log(key); // (4) ['samsung', 'apple', 'lg', 'nokia'] 
-  // console.log(val); // 
+  // console.log(val); // (4) ['galaxy', 'iphone', 'wing', 'N serize']
   // console.log(ent); // (4) [Array(2), Array(2), Array(2), Array(2)]
-  
+
   for(let [i,v] of ent){
     console.log(`${i} : ${v}`);
   }
-  ```
-  
-  
+
+```
+#### 구글 스프레드 시트 이용하기
+
+- 확장프로그램 -> app script
+
+```js
+function outputData() {
+
+// 시트주소상 /d/여기/edit#grid=0
+  const id = '1ABtZjHvn6ATyEqpw1QjUCHQNXVF9iQTa9mQBGirAeDw';
+// 시트탭 이
+  const sheetName = 'popular_menu';
+  const sheetData = SpreadsheetApp.openById(id).getSheetByName(sheetName).getDataRange().getValues();
+  const rows = sheetData.slice(1);
+  const data = rows.map( (row)=>{
+    const myObj = {question:row[0], answer:row[1]};
+    myObj.arr = [];
+    for(let i=1; i<7; i++){
+      const val = row[i];
+      if(val){
+        myObj.arr.push(val);
+      }
+    }
+    return myObj;
+  });
+  return data;
+}
+
+// -------------------------------------------------------
+function doGet(e){
+  const output = JSON.stringify({
+    status: 'success',
+    data: outputData()
+  });
+  return ContentService.createTextOutput(output).setMimeType(ContentService.MimeType.JSON);
+}
+```
+
+```js
+function outputData() {  const id = ' ';  const sheetName = ' ';  const sheetData = SpreadsheetApp.openById(id).getSheetByName(sheetName).getDataRange().getValues();  const rows = sheetData.slice(1);  const data = rows.map( (row)=>{    const myObj = {      id:row[0],       product:row[1],      type:row[2],      views:row[3],      price:row[4],      recommend:row[5],      season:row[6],    };        return myObj;  });  return data;}// ---------------------------------------function doGet(e){  const output = JSON.stringify({    status:'success',    data:outputData()  });  return ContentService.createTextOutput(output).setMimeType(ContentService.MimeType.JSON);}
+
+```
+
+
