[add] 필기내용 width값 파악하기

--- a/studyContent/study_211222.md
+++ b/studyContent/study_211222.md
@@ -25,5 +25,23 @@
 - `target.getBoundingClientRect().left` : 왼쪽부터 얼마나 떨어졌는지에 대한 좌표
 
 - `target.getBoundingClientRect().top` : 상단에서부터 얼마나 떨어졌는지에 대한 좌표
+  
+  - [참고 블로그](https://mommoo.tistory.com/85)
+
+
+
+##### 요소의 width 파악하기
+
+- `element.clientWidth()` : padding포함한 width
+
+- `element.offsetWidth()` : paddimg + border 포함한 width
+
+- `element.getBoundingClientRect()` : 외곽에 보이는 width
+
+- 순수 width값을 찾기 위해서는 뺄셈밖에 없으므로 최대한 내가 파악하고자 하는 최상단 요소는 padding border값 사용 X
+  
+  - [참고 블로그](https://so4869.tistory.com/26)
+
+
 
 
