[add] 필기내용 - 내 정리 추가

--- a/studyContent/study_211223.md
+++ b/studyContent/study_211223.md
@@ -14,7 +14,9 @@
 
 - ##### 버블링/캡처링
   
-  - ✍ 내 정리 : 버블링과 캡처링은 내가 따로 선언하는것은 아니고 이벤트 리스너를 `div`나 `ul`같은 요소에 넣었을 때 알아서 판단해서 처리 해줌
+  - ✍ 내 정리 : 버블링과 캡처링은 이벤트 리스너를 `div`나 `ul`같은 요소에 넣었을 때 알아서 판단해서 처리 해줌
+  
+  - ✍ `addEventListener` 에 `false` : 버블링 / `true` : 캡쳐링 - 안썼을때 `false`가 기본
   
   - **버블링** : 부모에 전달 - ✍ (부모에게 내 기능을 위임)
   
