[add] 필기내용 - 즉시실행함수 특징

--- a/studyContent/study_211223.md
+++ b/studyContent/study_211223.md
@@ -87,11 +87,22 @@ elBtn.addEventListener('click', (e)=>{
 
 
 
-
-
-
-
-
-
 - `e.target.classList.contains(name)` -> 이벤트 발생시킨.그것.class이름.있나요?(name) : 클래스명 포함 유무
+- `e.target.tagName.toLowerCase()` -> 이벤트 처리된.타겟의.요소이름.소문자로처리()
 
+
+
+##### 즉시실행함수
+
+- ```js
+  (()=>{
+    let i = 0;
+  })()  // -> 즉시실행함수 / 외부 접근 X
+  // --------------------------------------
+  {
+    let i = 0;
+  }  // 외부접근 X
+  console.log(i); // Uncaught ReferenceError: i is not defined
+  ```
+
+- 외부에서 접근 불가
