--- a/studyContent/study_211229.md
+++ b/studyContent/study_211229.md
@@ -1,8 +1,12 @@
 ## 21.12.29
 
+[스크롤 실습 파일]: ../study_code/b_step_03/html/e_09_scrollMove.html
+
+
+
 #### js
 
-해당 요소의 위치 파악
+#### 해당 요소의 위치 파악
 
 - `offsetTop` : 위에서부터 얼마나 떨어져있는가?
 - `offsetLeft` : 왼쪽에서부터 얼마나 떨어져있는가?
@@ -27,5 +31,13 @@ window.addEventListener('scroll', e=> {
 
 
 
+##### 비슷한 스크롤 옵션들
 
+- `scrollTop` : 선택요소(element) 기준 스크롤의 움직인 위치 값
 
+- `scrollY` : 브라우저(window) 기준 스크롤의 움직임 위치 값 / ✍ window를 대상으로 사용하는 것, 얼마나 스크롤 됐는지 그 수치를 픽셀값으로 반환
+- `offsetTop` : 선택자의 상단에서부터 떨어져있는 위치(스크롤바기준 0부터) / ✍ 현재 요소의 상단부터 외부 요소까지의 거리
+- `scrollTo` : 지정된 스크롤 위치로 이동
+  - `window.scrollTo(0, 500);`
+  - `window.scrollTo({top:500, behavior: 'smooth'});` : behavior속성을 넣으면 움직임을 설정할 수 있음 / 없으면 틱 넘어감
+- `scrollBy` : 현재 위치를 기준으로 지정된 스크롤만큼 추가로 누를때 마다 이동
