[add] js 스크롤 기능

--- a/studyContent/study_211229.md
+++ b/studyContent/study_211229.md
@@ -41,3 +41,7 @@ window.addEventListener('scroll', e=> {
   - `window.scrollTo(0, 500);`
   - `window.scrollTo({top:500, behavior: 'smooth'});` : behavior속성을 넣으면 움직임을 설정할 수 있음 / 없으면 틱 넘어감
 - `scrollBy` : 현재 위치를 기준으로 지정된 스크롤만큼 추가로 누를때 마다 이동
+
+
+
+페럴럭스 / 랜딩 : 둘다 스크롤에 대한 효과/ 더 찾아보기
