--- a/studyContent/study_211231.md
+++ b/studyContent/study_211231.md
@@ -27,3 +27,64 @@ let newNarr = nArr.map(n=> { //  map : 내용 전체를 순환하여 처리
 console.log(newNarr); // (7) [1, 4, 9, 16, 25, 36, 49]
 ```
 
+
+
+- 마우스 버튼
+  - `mousedown` : 마우스 누르면
+  - `mouseup` : 마우스 떼면
+  - `mouseleave` : 마우스가 해당 영역에서 벗어나면
+
+```js
+// 비밀번호 확인버튼 클릭시 비번 확인
+pwViewBtn.addEventListener('mousedown', (e)=>{
+  // console.log( e.button ); // 왼버튼 0, 휠버튼 1, 오른버튼 2
+  e.preventDefault();
+  // 왼버튼 클릭 확인 (e.button에서 0)
+  if(e.button === 0){ 
+    userPw.type = 'text'; // 왼버튼 누르면 입력한 pw 보여지게
+  }
+});
+
+pwViewBtn.addEventListener('mouseup', (e)=>{
+  e.preventDefault();
+  userPw.type = 'password'; // 왼버튼 떼면 다시 비밀번호 가려지게
+
+});
+
+pwViewBtn.addEventListener('mouseleave', (e)=>{ // 해당 버튼에서 벗어나도 비밀번호 가려지도록
+  e.preventDefault();
+  userPw.type = 'password'; 
+});
+
+// -------------------------------------------------------------
+// mouseup, mouseleave를 함축
+
+const fnPwType = function(e){
+  e.preventDefault();
+  userPw.type = 'password'; // 왼버튼 떼면 다시 비밀번호 가려지게
+}
+
+pwViewBtn.addEventListener('mouseup',  fnPwType );
+
+// 해당 버튼에서 벗어나도 비밀번호 가려지도록
+pwViewBtn.addEventListener('mouseleave', fnPwType );
+
+// ----------------------------------------------------------------
+// 전부다 함축
+
+const fnPwType = function(e){
+  e.preventDefault();
+  if( e.button === 0 && e.type === 'mousedown'){ // 왼버튼 클릭 확인 (e.button에서 0)
+    userPw.type = 'text'; // 왼버튼 누르면 입력한 pw 보여지게
+  }else {
+    userPw.type = 'password'; // 왼버튼 떼면 다시 비밀번호 가려지게
+  }
+};
+
+pwViewBtn.addEventListener('mousedown', fnPwType );
+
+pwViewBtn.addEventListener('mouseup',  fnPwType );
+
+pwViewBtn.addEventListener('mouseleave', fnPwType );
+```
+
