[add]  async-await 처리방법 이해 및 axios사용

--- a/studyContent/study_211231.md
+++ b/studyContent/study_211231.md
@@ -1,5 +1,9 @@
 ## 21.12.31
 
+[실습파일 d_13_class]: ../study_code/b_step_03/html/d_13_class.html
+
+
+
 #### js
 
 ##### 생성자 함수
@@ -87,4 +91,51 @@ pwViewBtn.addEventListener('mouseup',  fnPwType );
 
 pwViewBtn.addEventListener('mouseleave', fnPwType );
 ```
+
+```js
+// 위 코드를 함수처리하기
+const fnEvent = (element, handlerType, fn) => {
+  handlerType.forEach( handler => {
+    element.addEventListener(handler, (e) => {
+      e.preventDefault();
+      fn(e);
+    });
+  });
+};
+
+const fnPwType = function(e){
+  e.preventDefault();
+  if( e.button === 0 && e.type === 'mousedown'){ // 왼버튼 클릭 확인 (e.button에서 0)
+    userPw.type = 'text'; // 왼버튼 누르면 입력한 pw 보여지게
+  }else {
+    userPw.type = 'password'; // 왼버튼 떼면 다시 비밀번호 가려지게
+  }
+};
+
+fnEvent(pwViewBtn, ['mousedown', 'mouseup', 'mouseleave'], fnPwType);
+```
+
+
+
+##### Promise
+
+- 생성자 함수, new필요
+
+- 콜백 함수 -> 콜백지옥 -> 해석이 어려움 으로 인해 위 기능들이 생겨남
+
+- `Promise`는 순서대로 진행할 수 있도록, 어떠한 작업의 원활한 진행을 위해
+
+- 에러처리 `.catch` / 여튼 처리 `.finally`
+
+  
+
+##### fetch
+
+##### async/await
+
+
+
+
+
+
 
