[add]  react - useState

--- a/studyContent/study_220104.md
+++ b/studyContent/study_220104.md
@@ -17,3 +17,38 @@
 - return위에 변수 작성 후 해당 컴포넌트에 지정
 
   <img src="./images/react_val.png" art="리액트 변수지정"  align=left />
+
+
+
+
+
+##### 버튼 누를때 마다 하트 변경
+
+```react
+export default function ConBox(){
+    
+  let [fav, setFav] = useState('🤍');
+  console.log(fav);
+
+  const fnFavorite = () => {
+    fav = (fav === '🤍') ? '🧡' : '🤍';
+    setFav(fav)
+  }
+
+  return(
+    <button type="button" onClick={fnFavorite}>좋아요</button>
+    <span>{fav}</span>
+  )
+}
+
+```
+
+
+
+
+
+##### npm 설치
+
+- 아이콘 설치
+
+  `npm i react-icons`
