[add] 필기내용 추가

--- a/studyContent/study_220104.md
+++ b/studyContent/study_220104.md
@@ -45,6 +45,10 @@ export default function ConBox(){
 
 
 
+`useState()` : 하나의 내용에서 변경될 내용을 적용하기 위한 API
+
+`useEffect()` : 상태체크(변화시 어떠한 기능을 확인 체크), fetching
+
 
 
 ##### npm 설치
@@ -52,3 +56,7 @@ export default function ConBox(){
 - 아이콘 설치
 
   `npm i react-icons`
+
+
+
+`npm run build` :  최종적으로 완성 후 내보낼때
